--- a/games.html
+++ b/games.html
@@ -12,14 +12,14 @@
     </head>
 
     <body>
-        <div class="container fancy-shadow">
-            <div class="header">
+        <div class="container single fancy-shadow">
+            <header>
                 <h1>Aleksander Lasecki</h1>
                 <h2>przygody z edukacją</h2>
                 <h3>Projektowanie gier</h3>
-            </div>
+            </header>
 
-            <div class="card single fancy-shadow">
+            <section class="card single fancy-shadow">
                 <h4>Element 1</h4>
                 <div>
                     <p>
@@ -32,17 +32,17 @@
                     </p>
                 </div>
                 <h5>Podsumowanie 1</h5>
-            </div>
+            </section>
 
-            <div class="card single fancy-shadow">
+            <section class="card single fancy-shadow">
                 <h4>Element 2</h4>
                 <div>
                     <p>Coś tam, coś tam i jeszcze coś innego</p>
                 </div>
                 <h5>Podsumowanie 2</h5>
-            </div>
+            </section>
 
-            <div class="card single fancy-shadow">
+            <section class="card single fancy-shadow">
                 <h4>Element 3</h4>
                 <div>
                     <p>
@@ -52,15 +52,15 @@
                     </p>
                 </div>
                 <h5>Podsumowanie 3</h5>
-            </div>
+            </section>
 
-            <div class="card single fancy-shadow">
+            <section class="card single fancy-shadow">
                 <h4>Element 4</h4>
                 <div>
                     <p>Coś tam, coś tam i jeszcze coś innego</p>
                 </div>
                 <h5>Podsumowanie 4</h5>
-            </div>
+            </section>
 
             <a href="index.html" class="back-button fancy-shadow">Powrót</a>
         </div>
