--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
     <body>
         <div class="container fancy-shadow">
-            <div class="header">
+            <header>
                 <h1>Aleksander Lasecki</h1>
                 <h2>przygody z edukacją</h2>
-            </div>
-            <div class="description">
+            </header>
+            <article class="description">
                 <p>
                     <img id="photo" class="fancy-shadow" src="image.jpg" alt="TurboTopolog" width="215px" />
                     Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
                 </p>
-            </div>
-            <div class="subjects">
+            </article>
+            <nav class="subjects">
                 <div class="sub-header">
                     <h2>Moja edukacja</h2>
                 </div>
@@ -35,8 +35,8 @@
                         <li><a href="#">Studia: semestr 3 (2017/18)</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="hobbies">
+            </nav>
+            <nav class="hobbies">
                 <div class="sub-header">
                     <h2>Moje hobby</h2>
                 </div>
@@ -49,7 +49,7 @@
                         <li><a href="#">Rekreacyjny x86</a></li>
                     </ul>
                 </div>
-            </div>
+            </nav>
         </div>
     </body>
 </html>
