--- a/high-school.html
+++ b/high-school.html
@@ -13,39 +13,39 @@
 
     <body>
         <div class="container fancy-shadow">
-            <div class="header">
+            <header>
                 <h1>Aleksander Lasecki</h1>
                 <h2>przygody z edukacją</h2>
                 <h3>Szkoła średnia</h3>
-            </div>
+            </header>
 
             <h3 class="card-title">Przedmiot 1</h3>
-            <div class="card left fancy-shadow">
+            <section class="card left fancy-shadow">
                 <h4>Przedmiot</h4>
                 <div>
                     <p>Coś tam, coś tam i jeszcze coś innego</p>
                 </div>
-            </div>
-            <div class="card right fancy-shadow">
+            </section>
+            <section class="card right fancy-shadow">
                 <h4>Dodatkowo</h4>
                 <div>
                     <p>Coś tam, coś tam i jeszcze coś innego. I do tego jeszcze więcej tekstu</p>
                 </div>
-            </div>
+            </section>
 
             <h3 class="card-title">Przedmiot 2</h3>
-            <div class="card left fancy-shadow">
+            <section class="card left fancy-shadow">
                 <h4>Przedmiot</h4>
                 <div>
                     <p>Coś tam, coś tam i jeszcze coś innego</p>
                 </div>
-            </div>
-            <div class="card right fancy-shadow">
+            </section>
+            <section class="card right fancy-shadow">
                 <h4>Dodatkowo</h4>
                 <div>
                     <p>Coś tam, coś tam i jeszcze coś innego. I do tego jeszcze więcej tekstu</p>
                 </div>
-            </div>
+            </section>
 
             <a href="index.html" class="back-button fancy-shadow">Powrót</a>
         </div>
