--- a/index.html
+++ b/index.html
@@ -21,22 +21,13 @@
                 <img id="photo" class="fancy-shadow" src="image.jpg" alt="TurboTopolog" width="215" />
                 <h3>O mnie:</h3>
                 <p>
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
+                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
+                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
+                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
+                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
+                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
+                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
+                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
                 </p>
             </article>
             <nav class="subjects">
