--- a/games.html
+++ b/games.html
@@ -62,7 +62,9 @@
                 <h5>Podsumowanie 4</h5>
             </section>
 
-            <a href="index.html" class="back-button fancy-shadow">Powrót</a>
+            <div class="button-wrapper">
+                <a href="index.html" class="back-button fancy-shadow">Powrót</a>
+            </div>
         </div>
     </body>
 </html>
