--- a/high-school.html
+++ b/high-school.html
@@ -47,7 +47,9 @@
                 </div>
             </section>
 
-            <a href="index.html" class="back-button fancy-shadow">Powrót</a>
+            <div class="button-wrapper">
+                <a href="index.html" class="back-button fancy-shadow">Powrót</a>
+            </div>
         </div>
     </body>
 </html>
