--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
                 <img id="photo" class="fancy-shadow" src="image.jpg" alt="TurboTopolog" width="215" />
                 <h3>O mnie:</h3>
                 <p>
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
-                    Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla. Bla bla bla bla bla.
+                    Szkołę średnią skończyłem w Pile w roku 2016.
+                    Od roku 2016 studiuję informatykę na Wydziale Podstawowych Problemów Techniki Politechniki Wrocławskiej.
+                </p>
+                <p>
+                    I w sumie to na razie tyle. Może za parę lat będzie więcej do napisania.
                 </p>
             </article>
             <nav class="subjects">
@@ -37,9 +35,9 @@
                 <div class="sub-list">
                     <ul>
                         <li><a href="high-school.html">Szkoła średnia</a></li>
-                        <li><a href="#">Studia: semestr 1 (2016/17)</a></li>
-                        <li><a href="#">Studia: semestr 2 (2016/17)</a></li>
-                        <li><a href="#">Studia: semestr 3 (2017/18)</a></li>
+                        <li><a href="sem1.html">Studia: semestr 1 (2016/17)</a></li>
+                        <li><a href="sem2.html">Studia: semestr 2 (2016/17)</a></li>
+                        <li><a href="sem3.html">Studia: semestr 3 (2017/18)</a></li>
                     </ul>
                 </div>
             </nav>
@@ -49,11 +47,8 @@
                 </div>
                 <div class="sub-list">
                     <ul>
+                        <li><a href="music.html">Muzyka</a></li>
                         <li><a href="games.html">Projektowanie gier</a></li>
-                        <li><a href="#">I dunno</a></li>
-                        <li><a href="#">Sprzątanie</a></li>
-                        <li><a href="#">Podziwianie widelców kuchennych</a></li>
-                        <li><a href="#">Rekreacyjny x86</a></li>
                     </ul>
                 </div>
             </nav>
