--- a/music.html
+++ b/music.html
@@ -16,7 +16,7 @@
             <header>
                 <h1>Aleksander Lasecki</h1>
                 <h2>przygody z edukacją</h2>
-                <h3>Projektowanie gier</h3>
+                <h3>Muzyka</h3>
             </header>
 
             <section class="card single fancy-shadow">
