--- a/sem1.html
+++ b/sem1.html
@@ -16,34 +16,17 @@
             <header>
                 <h1>Aleksander Lasecki</h1>
                 <h2>przygody z edukacją</h2>
-                <h3>Szkoła średnia</h3>
+                <h3>Semestr 1 (2016/17)</h3>
             </header>
 
-            <h3 class="card-title">Matematyka</h3>
-            <section class="card left fancy-shadow">
-                <h4>Czego się dowiedziałem?</h4>
-                <div>
-                    <p>
-                        Wszystkiego o czym potem i tak musiałem zapomnieć,
-                        poniewarz matematyka na studiach to coś kompletnie innego.
-                    </p>
-                </div>
-            </section>
-            <section class="card right fancy-shadow">
-                <h4>Czego warto się douczyć?</h4>
-                <div>
-                    <p>Całek, algebry... Właściwie wszystkiego.</p>
-                </div>
-            </section>
-
-            <h3 class="card-title">Fizyka</h3>
+            <h3 class="card-title">Analiza metematyczna 1</h3>
             <section class="card left fancy-shadow">
                 <h4>Czego się dowiedziałem?</h4>
                 <div>
                     <ul>
-                        <li>Co to jest całka</li>
-                        <li>Że każdy satalita bezustannie spada na ziemię</li>
-                        <li>Okazuje się, że zajęcia pozalekcyjne mogą się również odbywać w pokoju nauczycielskim</li>
+                        <li>Granice</li>
+                        <li>Pochodne</li>
+                        <li>Całki</li>
                     </ul>
                 </div>
             </section>
@@ -51,17 +34,57 @@
                 <h4>Czego warto się douczyć?</h4>
                 <div>
                     <p>
-                        Pisania esejów...
+                        Przydałoby się trochę więcej topologii.
                     </p>
                 </div>
             </section>
 
-            <h3 class="card-title">Polski</h3>
+            <h3 class="card-title">Algebra z geometrią analityczną</h3>
+            <section class="card left fancy-shadow">
+                <h4>Czego się dowiedziałem?</h4>
+                <div>
+                    <ul>
+                        <li>Teoria liczb</li>
+                        <li>Liczby zespolone</li>
+                        <li>Wektory i macierze</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="card right fancy-shadow">
+                <h4>Czego warto się douczyć?</h4>
+                <div>
+                    <p>
+                        Na razie wystarczy.
+                    </p>
+                </div>
+            </section>
+
+            <h3 class="card-title">Logika i struktury formalne</h3>
+            <section class="card left fancy-shadow">
+                <h4>Czego się dowiedziałem?</h4>
+                <div>
+                    <ul>
+                        <li>Kwantyfikatory</li>
+                        <li>Zbiory</li>
+                        <li>Moc (ale nie taka jak w Gwiezdnych Wojnach)</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="card right fancy-shadow">
+                <h4>Czego warto się douczyć?</h4>
+                <div>
+                    <p>
+                        Niektórzy mówią, że teorii kategorii.
+                    </p>
+                </div>
+            </section>
+
+            <h3 class="card-title">Wstęp do informatyki i programowania</h3>
             <section class="card left fancy-shadow">
                 <h4>Czego się dowiedziałem?</h4>
                 <div>
                     <p>
-                        Że Słowacki wielkim poetą był.
+                        Że Ada jest najlepszym językiem programowania na świecie.
                     </p>
                 </div>
             </section>
@@ -69,8 +92,7 @@
                 <h4>Czego warto się douczyć?</h4>
                 <div>
                     <p>
-                        Warto pojąć fakt, że nie wszystkiego książki są tak nudne
-                        jak lektury szkolne i że czytanie może (jakiś cudem) być przyjemne.
+                        ...
                     </p>
                 </div>
             </section>
