--- a/sem3.html
+++ b/sem3.html
@@ -16,52 +16,35 @@
             <header>
                 <h1>Aleksander Lasecki</h1>
                 <h2>przygody z edukacją</h2>
-                <h3>Szkoła średnia</h3>
+                <h3>Semestr 3 (2017/18)</h3>
             </header>
 
-            <h3 class="card-title">Matematyka</h3>
+            <h3 class="card-title">Architektura komputerów i systemy operacyjne</h3>
             <section class="card left fancy-shadow">
                 <h4>Czego się dowiedziałem?</h4>
                 <div>
                     <p>
-                        Wszystkiego o czym potem i tak musiałem zapomnieć,
-                        poniewarz matematyka na studiach to coś kompletnie innego.
+                        Że można napisać książkę, która ma 100+ stron w niecały
+                        tydzień w siedem osób, a także tego, że wszystko jest bardzo proste.
                     </p>
                 </div>
             </section>
             <section class="card right fancy-shadow">
                 <h4>Czego warto się douczyć?</h4>
                 <div>
-                    <p>Całek, algebry... Właściwie wszystkiego.</p>
-                </div>
-            </section>
-
-            <h3 class="card-title">Fizyka</h3>
-            <section class="card left fancy-shadow">
-                <h4>Czego się dowiedziałem?</h4>
-                <div>
-                    <ul>
-                        <li>Co to jest całka</li>
-                        <li>Że każdy satalita bezustannie spada na ziemię</li>
-                        <li>Okazuje się, że zajęcia pozalekcyjne mogą się również odbywać w pokoju nauczycielskim</li>
-                    </ul>
-                </div>
-            </section>
-            <section class="card right fancy-shadow">
-                <h4>Czego warto się douczyć?</h4>
-                <div>
                     <p>
-                        Pisania esejów...
+                        Pisania większych programów w językach assembly.
                     </p>
                 </div>
             </section>
 
-            <h3 class="card-title">Polski</h3>
+            <h3 class="card-title">Technologie programowania</h3>
             <section class="card left fancy-shadow">
                 <h4>Czego się dowiedziałem?</h4>
                 <div>
                     <p>
-                        Że Słowacki wielkim poetą był.
+                        Że są jednak na tym kierunku wykłady na których "aktualny stan rzeczy"
+                        tyczy się tej dekady, a nie lat pięćdziesiątych ubiegłego wieku.
                     </p>
                 </div>
             </section>
@@ -69,8 +52,26 @@
                 <h4>Czego warto się douczyć?</h4>
                 <div>
                     <p>
-                        Warto pojąć fakt, że nie wszystkiego książki są tak nudne
-                        jak lektury szkolne i że czytanie może (jakiś cudem) być przyjemne.
+                        Regex'a by w końcu móc zrozumieć co robią programy w SEDzie.
+                    </p>
+                </div>
+            </section>
+
+            <h3 class="card-title">Bazy danych i systemy informacyjne</h3>
+            <section class="card left fancy-shadow">
+                <h4>Czego się dowiedziałem?</h4>
+                <div>
+                    <p>
+                        Że można, bezproblemowo dostać 5.5 z przedmiotu którego zasady
+                        oceniania (niewiedzieć czemu) wielu osobom się nie podobały.
+                    </p>
+                </div>
+            </section>
+            <section class="card right fancy-shadow">
+                <h4>Czego warto się douczyć?</h4>
+                <div>
+                    <p>
+                        Obiektowych baz danych.
                     </p>
                 </div>
             </section>
