--- a/sem2.html
+++ b/sem2.html
@@ -16,34 +16,35 @@
             <header>
                 <h1>Aleksander Lasecki</h1>
                 <h2>przygody z edukacją</h2>
-                <h3>Szkoła średnia</h3>
+                <h3>Semestr 2 (2016/17)</h3>
             </header>
 
-            <h3 class="card-title">Matematyka</h3>
+            <h3 class="card-title">Analiza metematyczna 2</h3>
             <section class="card left fancy-shadow">
                 <h4>Czego się dowiedziałem?</h4>
                 <div>
                     <p>
-                        Wszystkiego o czym potem i tak musiałem zapomnieć,
-                        poniewarz matematyka na studiach to coś kompletnie innego.
+                        Że podciąg podciągu jest podciągiem ciągu.
                     </p>
                 </div>
             </section>
             <section class="card right fancy-shadow">
                 <h4>Czego warto się douczyć?</h4>
                 <div>
-                    <p>Całek, algebry... Właściwie wszystkiego.</p>
+                    <p>
+                        Że podciąg podciągu podciągu podciągu ciągu jest również podciągiem ciągu.
+                    </p>
                 </div>
             </section>
 
-            <h3 class="card-title">Fizyka</h3>
+            <h3 class="card-title">Algebra abstrakcyjna</h3>
             <section class="card left fancy-shadow">
                 <h4>Czego się dowiedziałem?</h4>
                 <div>
                     <ul>
-                        <li>Co to jest całka</li>
-                        <li>Że każdy satalita bezustannie spada na ziemię</li>
-                        <li>Okazuje się, że zajęcia pozalekcyjne mogą się również odbywać w pokoju nauczycielskim</li>
+                        <li>Grupy</li>
+                        <li>Pierścienie</li>
+                        <li>Ciała</li>
                     </ul>
                 </div>
             </section>
@@ -51,26 +52,27 @@
                 <h4>Czego warto się douczyć?</h4>
                 <div>
                     <p>
-                        Pisania esejów...
+                        Nie wiem ale na pewno coś ciekawego by się znalazło.
                     </p>
                 </div>
             </section>
 
-            <h3 class="card-title">Polski</h3>
+            <h3 class="card-title">Matematyka dyskretna</h3>
             <section class="card left fancy-shadow">
                 <h4>Czego się dowiedziałem?</h4>
                 <div>
-                    <p>
-                        Że Słowacki wielkim poetą był.
-                    </p>
+                    <ul>
+                        <li>Dużo dużych sum</li>
+                        <li>Grafy (i ryzykowne dowody twierdzień)</li>
+                        <li>Prawdopodobieństwo klasyczne</li>
+                    </ul>
                 </div>
             </section>
             <section class="card right fancy-shadow">
                 <h4>Czego warto się douczyć?</h4>
                 <div>
                     <p>
-                        Warto pojąć fakt, że nie wszystkiego książki są tak nudne
-                        jak lektury szkolne i że czytanie może (jakiś cudem) być przyjemne.
+                        Teorii grafów ale to za rok (chyba).
                     </p>
                 </div>
             </section>
