--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title>Edukacja: Gry</title>
+        <title>Edukacja: Muzyka</title>
         <meta name="description" content="Opis mojej przygody z edukacją">
         <meta name="author" content="Aleksander Lasecki">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
