--- a/sem3.html
+++ b/sem3.html
@@ -3,7 +3,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title>Edukacja: Szkoła średnia</title>
+        <title>Edukacja: Semestr 3 (2017/18)</title>
         <meta name="description" content="Opis mojej przygody z edukacją">
         <meta name="author" content="Aleksander Lasecki">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
