--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h2>przygody z edukacją</h2>
             </header>
             <article class="description">
-                <img id="photo" class="fancy-shadow" src="image.jpg" alt="TurboTopolog" width="215" />
+                <img id="photo" class="fancy-shadow" src="image.jpg" alt="Zdjęcie" />
                 <h3>O mnie:</h3>
                 <p>
                     Szkołę średnią skończyłem w Pile w roku 2016.
