--- a/games.html
+++ b/games.html
@@ -20,13 +20,14 @@
             </header>
 
             <section class="card single fancy-shadow">
-                <h4>Element</h4>
+                <h4>Tu byłaby gra gdybym w końcu jakąś skończył</h4>
                 <div>
                     <p>
-
+                        Gdyby liczyć wszystkie rozpoczęte projekty, portfolio miałbym spore
+                        ale niestety liczą się tylko te ukończone.
                     </p>
                 </div>
-                <h5>Podsumowanie</h5>
+                <h5>Kończenie projektów jest ciężkie</h5>
             </section>
 
             <div class="button-wrapper">
