--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     Od roku 2016 studiuję informatykę na Wydziale Podstawowych Problemów Techniki Politechniki Wrocławskiej.
                 </p>
                 <p>
-                    I w sumie to na razie tyle. Może za parę lat będzie więcej do napisania.
+                    W sumie to na razie tyle. Może za parę lat będzie więcej do napisania (Chyba, że nadal będę walczył z
+                    Językami Formalnymi i Teorią Translacji).
                 </p>
             </article>
             <nav class="subjects">
