--- a/music.html
+++ b/music.html
@@ -20,13 +20,37 @@
             </header>
 
             <section class="card single fancy-shadow">
-                <h4>Element</h4>
+                <h4>Elektroniczna</h4>
                 <div>
                     <p>
-
+                        Wszystko od lekkiego house'a do dubstepu (do którego fajnie się zasypia).
+                        W muzyce elektronicznej piękne jest to, że każdy utwór jest robiony od zera,
+                        więc niemal wszystkie dźwięki są w nim wyjątkowe.
                     </p>
                 </div>
-                <h5>Podsumowanie</h5>
+            </section>
+
+            <section class="card single fancy-shadow">
+                <h4>Klasyczna</h4>
+                <div>
+                    <p>
+                        Od czasu do czasu zdarza mi się posłuchać koncertu Rachmaninowa, pójść do
+                        opery, czy nawet (nieumiejętnie) zagrać coś na pianinie.
+                    </p>
+                </div>
+                <h5>Tego się nikt nie spodziwał</h5>
+            </section>
+
+            <section class="card single fancy-shadow">
+                <h4>POP</h4>
+                <div>
+                    <p>
+                        Chyba każdy czasem miewa taki humor w którym nie ma się ochoty zbyt dużo
+                        myśleć i chce się tylko czymś wypełnić ciszę panującą w salonie. POP jest
+                        do wtedy idalnym wyjściem.
+                    </p>
+                </div>
+                <h5>Każdemu się zdarza...</h5>
             </section>
 
             <div class="button-wrapper">
