--- a/high-school.html
+++ b/high-school.html
@@ -69,8 +69,8 @@
                 <h4>Czego warto się douczyć?</h4>
                 <div>
                     <p>
-                        Warto pojąć fakt, że nie wszystkiego książki są tak nudne
-                        jak lektury szkolne i że czytanie może (jakiś cudem) być przyjemne.
+                        Warto pojąć fakt, że nie wszystkie książki są tak nudne
+                        jak lektury szkolne i że czytanie może (jakimś cudem) być przyjemne.
                     </p>
                 </div>
             </section>
